# Countdown

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint-report.json  eslint.config.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  api.ts  clock.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  models.rs  storage.rs  sync.rs
src/components/: BaseModal.vue  IconButton.vue  PickerColumn.vue  SettingsModal.vue  TodoItem.vue  TodoModal.vue
src/composables/: useScroll.ts  useSync.ts  useTodos.ts  useUuid.ts
src/constants/: repeatOptions.ts
src/styles/: common.css
src/types/: interface.ts
src/utils/: datetime.ts  toast.ts
src/utils/__tests__/: datetime.test.ts  toast.test.ts
