[package]
name = "countdown"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "CC-BY-NC-SA-4.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "countdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"


# Windows-only native calls used to attach the window to the desktop layer
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }


